vercre-holder/src/snapshots/vercre_holder__presentation__tests__vp_token.snap
---
source: vercre-holder/src/presentation.rs
assertion_line: 529
expression: "&token"
---
header:
  alg: EdDSA
  typ: jwt
  kid: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9#0"
claims:
  iss: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
  jti: "[jti]"
  aud: "https://vercre.io/post"
  nonce: "1234567890"
  nbf: "[nbf]"
  iat: "[iat]"
  exp: "[exp]"
  vp:
    "@context":
      - "https://www.w3.org/2018/credentials/v1"
      - "https://www.w3.org/2018/credentials/examples/v1"
    id: "[vp.id]"
    type:
      - VerifiablePresentation
      - EmployeeIDPresentation
    verifiableCredential:
      - "{\"header\":{\"alg\":\"ES256K\",\"typ\":\"jwt\",\"kid\":\"did:example:ebfeb1f712ebc6f1c276e12ec21\"},\"claims\":{\"sub\":\"did:example:ebfeb1f712ebc6f1c276e12ec21\",\"nbf\":1700522515,\"iss\":\"https://example.com/issuers/14\",\"iat\":1700522515,\"jti\":\"https://example.com/credentials/3732\",\"exp\":1703114515,\"vc\":{\"@context\":[\"https://www.w3.org/2018/credentials/v1\",\"https://www.w3.org/2018/credentials/examples/v1\"],\"id\":\"https://example.com/credentials/3732\",\"type\":[\"VerifiableCredential\",\"EmployeeIDCredential\"],\"issuer\":\"https://example.com/issuers/14\",\"issuanceDate\":\"2023-11-20T23:21:55Z\",\"credentialSubject\":{\"id\":\"did:example:ebfeb1f712ebc6f1c276e12ec21\",\"employeeId\":\"1234567890\"},\"expirationDate\":\"2023-12-20T23:21:55Z\",\"credentialStatus\":{\"id\":\"\",\"type\":\"\"},\"credentialSchema\":{\"id\":\"\",\"type\":\"\"},\"refreshService\":{\"id\":\"\",\"type\":\"\"},\"termsOfUse\":[{\"type\":\"\",\"id\":\"\",\"profile\":\"\",\"obligation\":[{\"assigner\":\"\",\"assignee\":\"\",\"target\":\"\",\"action\":[\"\"]}],\"prohibition\":[{\"assigner\":\"\",\"assignee\":\"\",\"target\":\"\",\"action\":[]}],\"permission\":[{\"assigner\":\"\",\"assignee\":\"\",\"target\":\"\",\"action\":[]}]}],\"evidence\":[{\"type\":[\"\"],\"verifier\":\"\",\"evidenceDocument\":\"\",\"subjectPresence\":\"\",\"documentPresence\":\"\"}]}}}"
    holder: "did:jwk:eyJjcnYiOiJYMjU1MTkiLCJrdHkiOiJPS1AiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
